--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "chalk": "^5.2.0"
+    "has-flag": "^5.0.1"
   }
 }
